Dependency Injection samples in activity
Also added startup listener capability.

Added some sample codes in order to showcase how to use android
annotations in code practically

--- a/androidmodernarchetype/src/main/res/values/strings.xml
+++ b/androidmodernarchetype/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">AndroidModernArchetype</string>
     <string name="hello_world">Hello world!</string>
+    <string name="some_info">Did you like it? if not, tell me what can I do for you?</string>
 
 </resources>
