--- a/androidmodernarchetype/src/main/res/values/strings.xml
+++ b/androidmodernarchetype/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="some_info">Did you like it? if not, tell me what can I do for you?</string>
 
+    <string name="yes">yes</string>
+    <string name="no">no</string>
+    <string name="ok">OK</string>
+
 </resources>
